--- a/src/app/post-list-item/post-list-item.component.html
+++ b/src/app/post-list-item/post-list-item.component.html
@@ -1,8 +1,9 @@
 <li [ngClass]="{'list-group-item': true, 'list-group-item-success': post.loveIt>0, 'list-group-item-danger': post.loveIt<0}">
   <span class="h2">{{ post.title }}</span>
-  <span class="pull-right date">{{ post.created_at | date: 'MM/dd/yyyy, hh:ss a' }}</span>
+  <span class="pull-right date"><span class="badge">{{ post.loveIt }}</span> {{ post.created_at | date: 'MM/dd/yyyy, hh:ss a' }}</span>
 
   <p>{{ post.content }}</p>
   <button type="button" name="loveIf" class="btn btn-success" (click)="onLoveIt(post)">Love It!</button>
   <button type="button" name="onDoNotLoveIt" class="btn btn-danger" (click)="onDoNotLoveIt(post)">Don't Love It!</button>
+  <button type="button" name="remove" class="pull-right btn btn-danger"  (click)="onDelete(post)">Supprimer Post</button>
 </li>
